--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "notus-angular",
+  "name": "quizzy-angular",
   "version": "1.1.0",
   "description": "Notus Angular - Free Tailwind CSS UI Kit and Admin by Creative Tim.",
-  "repository": "https://github.com/creativetimofficial/notus-angular",
+  "repository": "https://github.com/creativetimofficial/quizzy-angular",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
